[gd_scene load_steps=23 format=2]

[ext_resource path="res://cenas/parallex.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/tilenovo.png" type="Texture" id=2]
[ext_resource path="res://cenas/main_char.tscn" type="PackedScene" id=3]
[ext_resource path="res://cenas/espinhos.tscn" type="PackedScene" id=4]
[ext_resource path="res://cenas/espinhos_contra.tscn" type="PackedScene" id=5]
[ext_resource path="res://cenas/ponte.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/fase2(eh_a1).gd" type="Script" id=7]
[ext_resource path="res://assets/Placas.png" type="Texture" id=8]
[ext_resource path="res://assets/sfx/Wood Cracking Sound Effect.mp3" type="AudioStream" id=9]
[ext_resource path="res://cenas/sol.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/DeliusSwashCaps-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://assets/background/atras.png" type="Texture" id=12]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=5]
0/name = "tilenovo.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 32 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 504, Vector2( 1, 0 ), 438, Vector2( 2, 0 ), 511, Vector2( 3, 0 ), 510 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( 6346, -40 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 175.5, 107.5 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 11 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 188.25, 107.5 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 11 )

[node name="fase2(eh_a1)" type="Node2D"]
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 2214.0
margin_top = 306.0
margin_right = 6400.0
margin_bottom = 1006.0
texture = ExtResource( 12 )
stretch_mode = 2

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = -1554.0
margin_top = -868.0
margin_right = 7014.0
margin_bottom = -36.0
texture = ExtResource( 12 )
stretch_mode = 2

[node name="parallex" parent="." instance=ExtResource( 1 )]
position = Vector2( -1313, 158 )

[node name="notfrieren" parent="." instance=ExtResource( 3 )]
position = Vector2( 282, 200 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = SubResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -458768, -536870912, 2, -458767, -536870912, 2, -458766, -536870912, 2, -458765, -536870912, 2, -458764, -536870912, 2, -458763, -536870912, 2, -458762, -536870912, 2, -458761, -536870912, 2, -458760, -536870912, 2, -458759, -536870912, 2, -458758, -536870912, 2, -458757, -536870912, 2, -458756, -536870912, 2, -458755, -536870912, 2, -458754, -536870912, 2, -458753, -536870912, 2, -524288, -536870912, 2, -524287, -536870912, 2, -524286, -536870912, 2, -524285, -536870912, 2, -524284, -536870912, 2, -524283, -536870912, 2, -524282, -536870912, 2, -524281, -536870912, 2, -524280, -536870912, 2, -524279, -536870912, 2, -524278, -536870912, 2, -524277, -536870912, 2, -524276, -536870912, 2, -524275, -536870912, 2, -393232, -536870912, 2, -393231, -536870912, 2, -393230, -536870912, 2, -393229, -536870912, 2, -393224, -536870912, 2, -393223, -536870912, 2, -393222, -536870912, 2, -393221, -536870912, 2, -393220, -536870912, 2, -393219, -536870912, 2, -393218, -536870912, 2, -393217, -536870912, 2, -458752, -536870912, 2, -458751, -536870912, 2, -458750, -536870912, 2, -458749, -536870912, 2, -458748, -536870912, 2, -458747, -536870912, 2, -458746, -536870912, 2, -458745, -536870912, 2, -458744, -536870912, 2, -458743, -536870912, 2, -458742, -536870912, 2, -458741, -536870912, 2, -458740, -536870912, 2, -458739, -536870912, 2, -458738, -536870912, 2, -458737, -536870912, 2, -458736, -536870912, 2, -458735, -536870912, 2, -458734, -536870912, 2, -458733, -536870912, 2, -458732, -536870912, 2, -458731, -536870912, 2, -458730, -536870912, 2, -458729, -536870912, 2, -458728, -536870912, 2, -458727, -536870912, 2, -458726, -536870912, 2, -458725, -536870912, 2, -458724, -536870912, 2, -458723, -536870912, 2, -458722, -536870912, 2, -458721, -536870912, 2, -458720, -536870912, 2, -458719, -536870912, 2, -458718, -536870912, 2, -458717, -536870912, 2, -458716, -536870912, 2, -458715, -536870912, 2, -458714, -536870912, 2, -458713, -536870912, 2, -458712, -536870912, 2, -458711, -536870912, 2, -458710, -536870912, 2, -458709, -536870912, 2, -458708, -536870912, 2, -458707, -536870912, 2, -458706, -536870912, 2, -458705, -536870912, 2, -458704, -536870912, 2, -458703, -536870912, 2, -458702, -536870912, 2, -458701, -536870912, 2, -458700, -536870912, 2, -458699, -536870912, 2, -458698, -536870912, 2, -458697, -536870912, 2, -458696, -536870912, 2, -458695, -536870912, 2, -458694, -536870912, 2, -458693, -536870912, 2, -458692, -536870912, 2, -458691, -536870912, 2, -458690, -536870912, 2, -458689, -536870912, 2, -458688, -536870912, 2, -458687, -536870912, 2, -458686, -536870912, 2, -458685, -536870912, 2, -458684, -536870912, 2, -458683, -536870912, 2, -458682, -536870912, 2, -458654, 0, 0, -458653, 0, 0, -458652, 0, 0, -458651, 0, 0, -458650, 0, 0, -458649, 0, 0, -458648, 0, 0, -458647, 0, 0, -458646, 0, 0, -458645, 0, 0, -458644, 0, 0, -458643, 0, 0, -458642, 0, 0, -458641, 0, 0, -458640, 0, 0, -327696, -536870912, 2, -327695, -536870912, 2, -327694, -536870912, 2, -327688, -536870912, 2, -327687, -536870912, 2, -327686, -536870912, 2, -327685, -536870912, 2, -327684, -536870912, 2, -327683, -536870912, 2, -327682, -536870912, 2, -327681, -536870912, 2, -393216, -536870912, 2, -393215, -536870912, 2, -393214, -536870912, 2, -393213, -536870912, 2, -393212, -536870912, 2, -393211, -536870912, 2, -393210, -536870912, 2, -393209, -536870912, 2, -393208, -536870912, 2, -393207, -536870912, 2, -393206, -536870912, 2, -393205, -536870912, 2, -393204, -536870912, 2, -393203, -536870912, 2, -393202, -536870912, 2, -393201, -536870912, 2, -393200, -536870912, 2, -393199, -536870912, 2, -393198, -536870912, 2, -393197, -536870912, 2, -393196, -536870912, 2, -393195, -536870912, 2, -393194, -536870912, 2, -393193, -536870912, 2, -393192, -536870912, 2, -393191, -536870912, 2, -393190, -536870912, 2, -393189, -536870912, 2, -393188, -536870912, 2, -393187, -536870912, 2, -393186, -536870912, 2, -393185, -536870912, 2, -393184, -536870912, 2, -393183, -536870912, 2, -393182, -536870912, 2, -393181, -536870912, 2, -393180, -536870912, 2, -393179, -536870912, 2, -393178, -536870912, 2, -393177, -536870912, 2, -393176, -536870912, 2, -393175, -536870912, 2, -393174, -536870912, 2, -393173, -536870912, 2, -393172, -536870912, 2, -393171, -536870912, 2, -393170, -536870912, 2, -393169, -536870912, 2, -393168, -536870912, 2, -393167, -536870912, 2, -393166, -536870912, 2, -393165, -536870912, 2, -393164, -536870912, 2, -393163, -536870912, 2, -393162, -536870912, 2, -393161, -536870912, 2, -393160, -536870912, 2, -393159, -536870912, 2, -393158, -536870912, 2, -393157, -536870912, 2, -393156, -536870912, 2, -393155, -536870912, 2, -393154, -536870912, 2, -393153, -536870912, 2, -393152, -536870912, 2, -393151, -536870912, 2, -393150, -536870912, 2, -393149, -536870912, 2, -393148, -536870912, 2, -393147, -536870912, 2, -393146, -536870912, 2, -393117, 0, 0, -393116, 0, 0, -393115, 0, 0, -393114, 0, 0, -393113, 0, 0, -393112, 0, 0, -393111, 0, 0, -393110, 0, 0, -393109, 0, 0, -393108, 0, 0, -393107, 0, 0, -393106, 0, 0, -393105, 0, 0, -393104, 0, 0, -262160, -536870912, 2, -262159, -536870912, 2, -262158, -536870912, 2, -262150, -536870912, 1, -262149, -536870912, 1, -262148, -536870912, 1, -262147, -536870912, 1, -262146, -536870912, 1, -262145, -536870912, 1, -327680, -536870912, 1, -327679, -536870912, 1, -327678, -536870912, 1, -327677, -536870912, 1, -327676, -536870912, 1, -327675, -536870912, 1, -327674, -536870912, 1, -327673, -536870912, 1, -327672, -536870912, 1, -327671, -536870912, 1, -327670, -536870912, 1, -327669, -536870912, 1, -327668, -536870912, 1, -327667, -536870912, 1, -327666, -536870912, 1, -327665, -536870912, 1, -327664, -536870912, 1, -327663, -536870912, 1, -327662, -536870912, 1, -327661, -536870912, 1, -327660, -536870912, 1, -327659, -536870912, 1, -327658, -536870912, 1, -327657, -536870912, 1, -327656, -536870912, 1, -327655, -536870912, 1, -327654, -536870912, 1, -327653, -536870912, 1, -327652, -536870912, 1, -327651, -536870912, 1, -327650, -536870912, 1, -327649, -536870912, 1, -327648, -536870912, 1, -327647, -536870912, 1, -327646, -536870912, 1, -327645, -536870912, 1, -327644, -536870912, 1, -327643, -536870912, 1, -327642, -536870912, 1, -327641, -536870912, 1, -327640, -536870912, 1, -327639, -536870912, 1, -327638, -536870912, 1, -327637, -536870912, 1, -327636, -536870912, 1, -327635, -536870912, 1, -327634, -536870912, 1, -327633, -536870912, 1, -327632, -536870912, 1, -327631, -536870912, 1, -327630, -536870912, 1, -327629, -536870912, 1, -327628, -536870912, 1, -327627, -536870912, 1, -327626, -536870912, 1, -327625, -536870912, 1, -327624, -536870912, 1, -327623, -536870912, 1, -327622, -536870912, 1, -327621, -536870912, 1, -327620, -536870912, 1, -327619, -536870912, 1, -327618, -536870912, 1, -327617, -536870912, 1, -327616, -536870912, 1, -327615, -536870912, 1, -327614, -536870912, 1, -327613, -536870912, 1, -327612, -536870912, 1, -327611, -536870912, 1, -327610, -536870912, 1, -327580, 0, 0, -327579, 0, 0, -327578, 0, 0, -327577, 0, 0, -327576, 0, 0, -327575, 0, 0, -327574, 0, 0, -327573, 0, 0, -327572, 0, 0, -327571, 0, 0, -327570, 0, 0, -327569, 0, 0, -327568, 0, 0, -327567, 0, 0, -196624, -536870912, 2, -196623, -536870912, 2, -196622, -536870912, 2, -196621, -536870912, 2, -262119, 1073741824, 1, -262118, 1610612736, 2, -262117, 1610612736, 2, -262116, 1610612736, 1, -131088, -536870912, 2, -131087, -536870912, 2, -131086, -536870912, 2, -131085, -536870912, 2, -131084, -536870912, 2, -196583, 1073741824, 1, -196582, 1610612736, 2, -196581, 1610612736, 2, -196580, 1610612736, 1, -65552, -536870912, 2, -65551, -536870912, 2, -65550, -536870912, 2, -65549, -536870912, 2, -65548, -536870912, 2, -65547, -536870912, 2, -65546, -536870912, 2, -131047, 1073741824, 1, -131046, 1610612736, 2, -131045, 1610612736, 2, -131044, 1610612736, 1, -16, -536870912, 2, -15, -536870912, 2, -14, -536870912, 2, -13, -536870912, 2, -12, -536870912, 2, -11, -536870912, 2, -10, -536870912, 2, -9, 536870912, 1, -65511, 1610612736, 0, -65510, 1610612736, 0, -65509, 1610612736, 0, -65508, 1610612736, 0, 65520, -536870912, 2, 65521, -536870912, 2, 65522, -536870912, 2, 65523, -536870912, 2, 65524, -536870912, 2, 65525, -536870912, 2, 65526, -536870912, 2, 65527, 536870912, 1, 131056, -536870912, 2, 131057, -536870912, 2, 131058, -536870912, 2, 131059, -536870912, 2, 131060, -536870912, 2, 131061, -536870912, 2, 131062, -536870912, 2, 131063, 536870912, 1, 196592, -536870912, 2, 196593, -536870912, 2, 196594, -536870912, 2, 196595, -536870912, 2, 196596, -536870912, 2, 196597, -536870912, 2, 196598, -536870912, 2, 196599, 536870912, 1, 262128, -536870912, 2, 262129, -536870912, 2, 262130, -536870912, 2, 262131, -536870912, 2, 262132, -536870912, 2, 262133, -536870912, 2, 262134, -536870912, 2, 262135, 536870912, 1, 196692, 0, 0, 196693, 0, 0, 196694, 0, 0, 196695, 0, 0, 196696, 0, 0, 327664, -536870912, 2, 327665, -536870912, 2, 327666, -536870912, 2, 327667, -536870912, 2, 327668, -536870912, 2, 327669, -536870912, 2, 327670, -536870912, 2, 327671, 536870912, 3, 327672, 0, 0, 327673, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 536870912, 0, 262163, 536870912, 0, 262164, 536870912, 0, 262165, 536870912, 0, 262166, 536870912, 0, 262167, 536870912, 0, 262168, 536870912, 0, 262169, 536870912, 0, 262170, 536870912, 0, 262171, 536870912, 0, 262172, 536870912, 0, 262173, 536870912, 0, 262174, 536870912, 0, 262175, 536870912, 0, 262176, 536870912, 0, 262177, 536870912, 0, 262178, 536870912, 0, 262179, 536870912, 0, 262180, 536870912, 0, 262181, 536870912, 0, 262182, 536870912, 0, 262183, 536870912, 0, 262184, 536870912, 0, 262185, 536870912, 0, 262186, 536870912, 0, 262204, 536870912, 0, 262205, 536870912, 0, 262206, 536870912, 0, 262207, -1610612736, 1, 262208, -1610612736, 1, 262209, -1610612736, 1, 262210, -1610612736, 1, 262211, -1610612736, 1, 262212, -1610612736, 1, 262213, -1610612736, 1, 262214, -1610612736, 1, 262220, 0, 0, 262221, 0, 0, 262222, 0, 0, 262223, 0, 0, 262237, 0, 0, 262238, 0, 0, 262239, 0, 0, 393200, -536870912, 2, 393201, -536870912, 2, 393202, -536870912, 2, 393203, -536870912, 2, 393204, -536870912, 2, 393205, -536870912, 2, 393206, -536870912, 2, 393207, -536870912, 2, 393208, -536870912, 2, 393209, -536870912, 2, 393210, -536870912, 2, 393211, -536870912, 2, 393212, -536870912, 2, 393213, -536870912, 2, 393214, -536870912, 2, 393215, -536870912, 2, 327680, -536870912, 2, 327681, -536870912, 2, 327682, -536870912, 2, 327683, -536870912, 2, 327684, -536870912, 2, 327685, -536870912, 2, 327686, -536870912, 2, 327687, -536870912, 2, 327688, -536870912, 2, 327689, -536870912, 2, 327690, -536870912, 2, 327691, -536870912, 2, 327692, -536870912, 2, 327693, -536870912, 2, 327694, -536870912, 2, 327695, -536870912, 2, 327696, -536870912, 2, 327697, -536870912, 2, 327698, -536870912, 2, 327699, -536870912, 2, 327700, -536870912, 2, 327701, -536870912, 2, 327702, -536870912, 2, 327703, -536870912, 2, 327704, -536870912, 2, 327705, -536870912, 2, 327706, -536870912, 2, 327707, -536870912, 2, 327708, -536870912, 2, 327709, -536870912, 2, 327710, -536870912, 2, 327711, -536870912, 2, 327712, -536870912, 2, 327713, -536870912, 2, 327714, -536870912, 2, 327715, -536870912, 2, 327716, -536870912, 2, 327717, -536870912, 2, 327718, -536870912, 2, 327719, -536870912, 2, 327720, -536870912, 2, 327721, -536870912, 2, 327722, -536870912, 2, 327740, -536870912, 2, 327741, -536870912, 2, 327742, -536870912, 2, 327743, -536870912, 2, 327744, -536870912, 2, 327745, -536870912, 2, 327746, -536870912, 2, 327747, -536870912, 2, 327748, -536870912, 2, 327749, -536870912, 2, 327750, -536870912, 2, 458736, -536870912, 2, 458737, -536870912, 2, 458738, -536870912, 2, 458739, -536870912, 2, 458740, -536870912, 2, 458741, -536870912, 2, 458742, -536870912, 2, 458743, -536870912, 2, 458744, -536870912, 2, 458745, -536870912, 2, 458746, -536870912, 2, 458747, -536870912, 2, 458748, -536870912, 2, 458749, -536870912, 2, 458750, -536870912, 2, 458751, -536870912, 2, 393216, -536870912, 2, 393217, -536870912, 2, 393218, -536870912, 2, 393219, -536870912, 2, 393220, -536870912, 2, 393221, -536870912, 2, 393222, -536870912, 2, 393223, -536870912, 2, 393224, -536870912, 2, 393225, -536870912, 2, 393226, -536870912, 2, 393227, -536870912, 2, 393228, -536870912, 2, 393229, -536870912, 2, 393230, -536870912, 2, 393231, -536870912, 2, 393232, -536870912, 2, 393233, -536870912, 2, 393234, -536870912, 2, 393235, -536870912, 2, 393236, -536870912, 2, 393237, -536870912, 2, 393238, -536870912, 2, 393239, -536870912, 2, 393240, -536870912, 2, 393241, -536870912, 2, 393242, -536870912, 2, 393243, -536870912, 2, 393244, -536870912, 2, 393245, -536870912, 2, 393246, -536870912, 2, 393247, -536870912, 2, 393248, -536870912, 2, 393249, -536870912, 2, 393250, -536870912, 2, 393251, -536870912, 2, 393252, -536870912, 2, 393253, -536870912, 2, 393254, -536870912, 2, 393255, -536870912, 2, 393256, -536870912, 2, 393257, -536870912, 2, 393258, -536870912, 2, 393276, -536870912, 2, 393277, -536870912, 2, 393278, -536870912, 2, 393279, -536870912, 2, 393280, -536870912, 2, 393281, -536870912, 2, 393282, -536870912, 2, 393283, -536870912, 2, 393284, -536870912, 2, 393285, -536870912, 2, 393286, -536870912, 2, 458852, 0, 0, 458853, 0, 0, 458854, 0, 0, 458855, 0, 0, 458856, 0, 0, 458857, 0, 0, 458858, 0, 0, 458859, 0, 0, 458860, 0, 0, 458861, 0, 0, 458862, 0, 0, 458863, 0, 0, 458864, 0, 0, 524387, 0, 0, 524388, 0, 0, 524389, 0, 0, 524390, 0, 0, 524391, 0, 0, 524392, 0, 0, 524393, 0, 0, 524394, 0, 0, 524395, 0, 0, 524396, 0, 0, 524397, 0, 0, 524398, 0, 0, 524399, 0, 0, 524400, 0, 0, 589922, 0, 0, 589923, 0, 0, 589924, 0, 0, 589925, 0, 0, 589926, 0, 0, 589927, 0, 0, 589928, 0, 0, 589929, 0, 0, 589930, 0, 0, 589931, 0, 0, 589932, 0, 0, 589933, 0, 0, 589934, 0, 0, 589935, 0, 0, 589936, 0, 0 )

[node name="espinhos" parent="." instance=ExtResource( 4 )]
position = Vector2( 1664, 234 )
scale = Vector2( 1.5, 2 )

[node name="espinhos2" parent="espinhos" instance=ExtResource( 5 )]
position = Vector2( 3.33325, -35 )

[node name="espinhos3" parent="." instance=ExtResource( 4 )]
position = Vector2( 1664, 234 )
scale = Vector2( 1.5, 2 )

[node name="espinhos2" parent="espinhos3" instance=ExtResource( 5 )]
position = Vector2( 3.33325, -35 )

[node name="espinhos2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1796, 238 )
scale = Vector2( 1.5, 2 )

[node name="espinhos2" parent="espinhos2" instance=ExtResource( 5 )]
position = Vector2( 2.00012, -36.5 )

[node name="ponte" parent="." instance=ExtResource( 6 )]
position = Vector2( 2040, 339 )
scale = Vector2( 2.35, 2.3 )

[node name="quebra" type="CPUParticles2D" parent="ponte"]
position = Vector2( 507.66, -10 )
scale = Vector2( 0.425532, 0.434783 )
emitting = false
lifetime = 2.0
one_shot = true
speed_scale = 10.0
texture = ExtResource( 8 )
emission_shape = 2
emission_rect_extents = Vector2( 500, 1 )
gravity = Vector2( 0, 50 )

[node name="madeira" type="AudioStreamPlayer" parent="ponte"]
stream = ExtResource( 9 )
volume_db = 7.0
pitch_scale = 0.5
bus = "SFX"

[node name="tempo_morte" type="Timer" parent="."]
wait_time = 0.05

[node name="morte" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="morte"]
position = Vector2( -102, 512 )
shape = SubResource( 6 )

[node name="sol" parent="." instance=ExtResource( 10 )]
position = Vector2( 4258, 88 )
scale = Vector2( 1, 1.5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1274, 150 )
shape = SubResource( 7 )

[node name="Popup" type="Popup" parent="Area2D"]
visible = true
margin_left = 988.0
margin_top = 182.0
margin_right = 1028.0
margin_bottom = 222.0

[node name="Label" type="Label" parent="Area2D/Popup"]
margin_left = 94.0
margin_top = -75.0
margin_right = 474.0
margin_bottom = -54.0
custom_fonts/font = SubResource( 8 )
text = "Preciso andar com cuidado para não me machucar..."

[node name="cara" type="Area2D" parent="."]
position = Vector2( 2467, 163 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cara"]
position = Vector2( -1, 6 )
shape = SubResource( 9 )

[node name="Label" type="Label" parent="cara"]
visible = false
margin_left = -143.0
margin_top = -81.0
margin_right = 142.0
margin_bottom = -36.0
custom_fonts/font = SubResource( 10 )
text = "Essa ponte parece caindo aos pedaços, 
               tenho que correr!"

[node name="cara2" type="Area2D" parent="."]
position = Vector2( 4258, 166 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cara2"]
position = Vector2( 2, -2 )
shape = SubResource( 9 )

[node name="teste" type="Label" parent="cara2"]
visible = false
margin_left = -143.0
margin_top = -81.0
margin_right = 142.0
margin_bottom = -36.0
custom_fonts/font = SubResource( 10 )
text = "Posso descansar um pouco na luz, o caminho
           à frente parece perigoso "

[connection signal="body_entered" from="espinhos" to="." method="_on_espinhos_body_entered"]
[connection signal="body_entered" from="espinhos3" to="." method="_on_espinhos3_body_entered"]
[connection signal="body_entered" from="espinhos2" to="." method="_on_espinhos2_body_entered"]
[connection signal="finished" from="ponte/madeira" to="." method="_on_madeira_finished"]
[connection signal="finished" from="ponte/madeira" to="ponte" method="_on_madeira_finished"]
[connection signal="timeout" from="tempo_morte" to="." method="_on_tempo_morte_timeout"]
[connection signal="body_entered" from="morte" to="." method="_on_morte_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="cara" to="." method="_on_cara_body_entered"]
[connection signal="body_exited" from="cara" to="." method="_on_cara_body_exited"]
[connection signal="body_entered" from="cara2" to="." method="_on_cara_body_entered"]
[connection signal="body_entered" from="cara2" to="." method="_on_cara2_body_entered"]
[connection signal="body_exited" from="cara2" to="." method="_on_cara_body_exited"]
[connection signal="body_exited" from="cara2" to="." method="_on_cara2_body_exited"]
